fix horizontal scrolling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,10 @@ header {
     overflow-x: hidden;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 main {
     background-image: url("../images/me-background.jpg");
     background-size: cover;
